WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82255
Never remove root compositing layers in the web process
https://bugs.webkit.org/show_bug.cgi?id=82255
Summary
Never remove root compositing layers in the web process
Anders Carlsson
Reported
2012-03-26 16:10:15 PDT
Never remove root compositing layers in the web process
Attachments
Patch
(2.87 KB, patch)
2012-03-26 16:15 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-03-26 16:15:03 PDT
Created
attachment 133921
[details]
Patch
Anders Carlsson
Comment 2
2012-03-26 16:45:09 PDT
Committed
r112175
: <
http://trac.webkit.org/changeset/112175
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug