Never remove root compositing layers in the web process https://bugs.webkit.org/show_bug.cgi?id=82255 <rdar://problem/11058521>

Reviewed by Sam Weinig.

Since we never leave accelerated compositing mode when using tiled drawing, we should
never remove root compositing layers in the web process.

* WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:
(WebKit::TiledCoreAnimationDrawingArea::setRootCompositingLayer):

Canonical link: https://commits.webkit.org/99612@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112175 268f45cc-cd09-0410-ab3c-d52691b4dbfc