Source/WebKit2/WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm
@@ -110,6 +110,13 @@ void TiledCoreAnimationDrawingArea::setRootCompositingLayer(GraphicsLayer* graph
 {
     CALayer *rootCompositingLayer = graphicsLayer ? graphicsLayer->platformLayer() : nil;
 
+    // Since we'll always be in accelerated compositing mode, the only time that layer will be nil
+    // is when the WKView is removed from its containing window. In that case, the layer will already be
+    // removed from the layer tree hierarchy over in the UI process, so there's no reason to remove it locally.
+    // In addition, removing the layer here will cause flashes when switching between tabs.
+    if (!rootCompositingLayer)
+        return;
+
     if (m_layerTreeStateIsFrozen) {
         m_pendingRootCompositingLayer = rootCompositingLayer;
         return;
@@ -325,19 +332,16 @@ void TiledCoreAnimationDrawingArea::setLayerHostingMode(uint32_t opaqueLayerHost
 
 void TiledCoreAnimationDrawingArea::setRootCompositingLayer(CALayer *layer)
 {
+    ASSERT(layer);
     ASSERT(!m_layerTreeStateIsFrozen);
 
     [CATransaction begin];
     [CATransaction setDisableActions:YES];
 
-    if (!layer)
-        m_rootLayer.get().sublayers = nil;
-    else {
-        m_rootLayer.get().sublayers = [NSArray arrayWithObject:layer];
+    m_rootLayer.get().sublayers = [NSArray arrayWithObject:layer];
 
-        if (m_pageOverlayLayer)
-            [m_rootLayer.get() addSublayer:m_pageOverlayLayer->platformLayer()];
-    }
+    if (m_pageOverlayLayer)
+        [m_rootLayer.get() addSublayer:m_pageOverlayLayer->platformLayer()];
 
     [CATransaction commit];
 }
